--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sportsee",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://5sensprod.github.io/sportsee_mock",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -17,6 +18,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^5.0.0",
     "prettier": "^2.8.8"
   }
 }
