--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sportsee",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://5sensprod.github.io/sportsee_mock",
+  "homepage": "https://5sensprod.github.io/sportsee_mock",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -19,7 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build -r https://github.com/5sensprod/sportsee_mock.git",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
